Regression: Using Grease Pencil Sculpt Grab Tool on a Stroke affected by Subdivide Modifier will Crash Blender #109986

Closed
opened 2023-07-11 22:41:48 +02:00 by concavepgons · 4 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41

Blender Version
Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: c7fc78b81ecb
Worked: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1

Short description of error
Using the Grab Tool in Sculpt Mode on a Grease Pencil object affected by the Subdivide Modifier will cause Blender to suddenly close. The other tools work fine though.

Exact steps for others to reproduce the error
In the file provided, switch to Sculpt Mode and use the Grab Tool on the Suzanne Grease Pencil Object. It will cause Blender to close.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41 **Blender Version** Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: `c7fc78b81ecb` Worked: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1d3 **Short description of error** Using the Grab Tool in Sculpt Mode on a Grease Pencil object affected by the Subdivide Modifier will cause Blender to suddenly close. The other tools work fine though. **Exact steps for others to reproduce the error** In the file provided, switch to Sculpt Mode and use the Grab Tool on the Suzanne Grease Pencil Object. It will cause Blender to close.
concavepgons added the
Status
Needs Triage
Type
Report
Priority
Normal
labels 2023-07-11 22:41:48 +02:00
Collaborator

Can't replicate this issue on 3.6.0 c7fc78b81e . @concavepgons Could you try the steps here and upload the crash log? Thanks!

Can't replicate this issue on 3.6.0 c7fc78b81ecb . @concavepgons Could you try the steps [here](https://docs.blender.org/manual/en/3.6/troubleshooting/crash.html#windows) and upload the crash log? Thanks!
YimingWu added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-07-12 05:08:22 +02:00

I can confirm the crash in current master & 3.6 (crash logs ain't generated in release build)
Assert hit in debug build at: BLI_assert(data->size < data->capacity);

I can confirm the crash in current master & 3.6 (crash logs ain't generated in release build) Assert hit in debug build at: `BLI_assert(data->size < data->capacity);`

Broke between d5fc1b9ba4 - 54e397cc78
I'll bisect

Broke between d5fc1b9ba4b8 - 54e397cc7830 I'll bisect
Caused by a7d652e459056fee2b652fb9ae327debe93e376d @SietseB @antoniov ^
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-14 12:16:55 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109986
There is no content yet.