Fix #109986: Crash when using GP grab tool on object with Subdivide modifier

The grab tool could crash when applied to a Grease Pencil object with a
Subdivide modifier (or any other modifier that changes the number of
points in strokes). This patch prevents the grab tool from crashing.

- Removed a grab tool exception that was no longer necessary.
- Added a missing null check.

Pull Request: https://projects.blender.org/blender/blender/pulls/110078